Daemon.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
 name: nginxds
 namespace: default
spec:
  selector:
   matchLabels:
    app: nginxapp
  template:
   metadata:
    name: nginxpod
    labels:
     app: nginxapp
   spec:
    tolerations:
    - operator: Exists
      effect: NoSchedule
    containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
 name: daemonsvc
 namespace: default
spec:
 type: NodePort
 selector:
  app: nginxapp
 ports:
 - port: 80
   targetPort: 80
