deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name:  mydeployment
 namespace: default
spec:
 replicas: 1
 selector:
   matchLabels:
    app: mywordpress
 template:
  metadata:
   name: wordpresspod
   labels:
    app: mywordpress
  spec:
    containers:
    - name: wordpress
      image: raja9658/mywordpress:1
      imagePullPolicy: Always
      resources:
       requests:
         memory: "64Mi"
         cpu: "100m"
       limits:
         memory: "128Mi"
         cpu: "300m"
      ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mydeployservice
  namespace: default
spec:
 type: LoadBalancer
 loadBalancerIP:  "34.100.219.135"
 selector:
   app: mywordpress
 ports:
 - port: 7070
   targetPort: 80
