pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
  labels:
   app: mynginxpod
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
    - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mynginxservice
spec: 
  type: NodePort
  selector:
   app: mynginxpod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
