replicationcontroller.yml
apiVersion: v1
kind: Service
metadata:
 name: mysrvreplication
spec:
 type: NodePort
 selector:
  app: javapodapp
 ports:
 - port: 4040
   targetPort: 8080
