sqlwordpress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name:  mydeployment
 namespace: default
spec:
 replicas: 1
 selector:
   matchLabels:
    app: mywordpress
 template:
  metadata:
   name: wordpresspod
   labels:
    app: mywordpress
  spec:
    containers:
    - name: wordpress
      image: wordpress
      imagePullPolicy: Always
      resources:
       requests:
         memory: 256Mi
         cpu: 200m
       limits:
         memory: 512Mi
         cpu: 400m
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mydeployservice
  namespace: default
spec:
 type: LoadBalancer
# loadBalancerIP:  "34.100.219.135"
 selector:
   app: mywordpress
 ports:
 - port: 7070
   targetPort: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mydeployservice
            port:
              number: 7070
